--- a/main/templates/Authenticate.html
+++ b/main/templates/Authenticate.html
@@ -13,10 +13,82 @@
 <div class="Container">
     <p>Menu</p>
     <ul>
-                <li><a href="grammar">grammar</a></li>
-                <li><a href="vocabulary">vocabulary</a></li>
-                <li><a href="/">index</a></li>
-            </ul>
+        <li><a href="grammar">grammar</a></li>
+        <li><a href="vocabulary">vocabulary</a></li>
+        <li><a href="/">index</a></li>
+    </ul>
+    <div class="Container">
+        <form method="post" class="Form">
+            {% csrf_token %}
+            <input type="text" name="name" placeholder="Name"><br>
+            <input type="text" name="surname" placeholder="Surname"><br>
+            <input type="email" name="email" placeholder="Email"><br>
+            <input type="password" name="password" placeholder="Password"><br>
+            <input type="submit" value="Authenticate or sign up" onclick="validate()">
+        </form>
+    </div>
+
 </div>
 </body>
+<script>
+    const nameRegex = /\w+/
+    const emailRegex = /\w+\d*@\w+\d*\.\w+\d*/
+
+
+    function validateName(name) {
+
+        if (name.length < 2) {
+            document.forms[0].name.setCustomValidity("Name should be at least 2 characters.");
+        } else {
+            document.forms[0].name.setCustomValidity("");
+        }
+        if (!nameRegex.exec(name)) {
+            document.forms[0].name.setCustomValidity("Name should contain only letters");
+        } else {
+            document.forms[0].name.setCustomValidity("");
+        }
+    }
+
+    function validateSurname(surname) {
+        if (surname.length < 3) {
+            document.forms[0].surname.setCustomValidity("Invalid field.");
+        } else {
+            document.forms[0].surname.setCustomValidity("");
+        }
+        if (!nameRegex.exec(surname)) {
+            document.forms[0].surname.setCustomValidity("Name should contain only letters");
+        } else {
+            document.forms[0].surname.setCustomValidity("");
+        }
+    }
+
+    function validateEmail(email) {
+        if (!emailRegex.exec(email)) {
+            document.forms[0].email.setCustomValidity("Email is incorrect.");
+        } else {
+            document.forms[0].email.setCustomValidity("");
+        }
+    }
+
+    function validatePassword(password) {
+        if (password.length < 5) {
+            document.forms[0].password.setCustomValidity("Password should be at least 5 characters length.");
+
+        } else {
+            document.forms[0].password.setCustomValidity("");
+        }
+    }
+
+    function validate() {
+        const name = document.forms[0].name.value;
+        const surname = document.forms[0].surname.value;
+        const email = document.forms[0].email.value;
+        const password = document.forms[0].password.value;
+
+        validateName(name);
+        validateSurname(surname);
+        validateEmail(email);
+        validatePassword(password);
+    }
+</script>
 </html>
