--- a/main/templates/Authenticate.html
+++ b/main/templates/Authenticate.html
@@ -3,8 +3,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <style>
+
+* {
+    font-size: 16pt;
+    background-color: black;
+    color: white;
+    font-family: "Lora", "serif";
+}
+
+ul {
+    list-style-type: none;
+}
+
+.Centered {
+    width: 100%;
+    text-align: center;
+}
+
+.Container {
+    margin: 30px;
+}
+
+h1 {
+    font-size: xx-large;
+}
+
+.Box {
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+}
+
+#dictionary {
+    font-size: 20pt;
+    color: aquamarine;
+}
+
+
+input {
+    border-radius: 35px;
+    border-color: white;
+    border-style: solid;
+    border-width: 3px;
+    margin-top: 15px;
+    text-align: center;
+}
+
+input:invalid {
+    border-color: orangered;
+}
+
+/*input:valid {*/
+/*    border-color: orangered;*/
+/*}*/
+
+
+
+@keyframes pulse {
+    from {
+        transform: scale(100%, 100%);
+    }
+
+    50% {
+        transform: scale(104%, 104%);
+    }
+
+    to {
+        transform: scale(100%, 100%);
+    }
+}
+
+/*input:required {*/
+/*    animation-name: pulse;*/
+/*    animation-duration: 2s;*/
+/*    animation-iteration-count: infinite;*/
+/*}*/
+    </style>
 
 </head>
 <body>
